// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zeppelinTokenService should return undefined and log error if keys are not returned 1`] = `
Array [
  Object {
    "data": "zeppelin",
    "message": "Error logging in to zeppelin: ",
    "metadata": [Error: username or password not defined],
  },
]
`;

exports[`zeppelinTokenService should return undefined and log error if login fails 1`] = `
Array [
  Object {
    "data": "zeppelin",
    "message": "Error logging in to zeppelin: ",
    "metadata": [Error: Request failed with status code 403],
  },
]
`;
